--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Slideshow -->
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="img_guestbook_wall.jpg" alt="Image from Nicolas Dmítrichev via unsplash.com" style="width:100%">
+        <img src="img_guestbook_wall.jpg" alt="alterado" style="width:100%">
         <div class="w3-display-topleft w3-container w3-padding-32">
           <span class="w3-white w3-padding-large w3-animate-bottom">Share your message with the community</span>
         </div>
